--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -346,83 +346,6 @@
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               id="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpyem"
-               name="Multiply instructions level (ARC EM)"
-               valueType="enumerated">
-            <enumeratedOptionValue
-                  command="-mmpy-option=none"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.none"
-                  isDefault="true"
-                  name="none">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=w"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.w"
-                  name="w">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh1"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh1"
-                  isDefault="false"
-                  name="wlh1">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh2"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh2"
-                  name="wlh2">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh3"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh3"
-                  name="wlh3">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh4"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh4"
-                  name="wlh4">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=wlh5"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh5"
-                  name="wlh5">
-            </enumeratedOptionValue>
-         </option>
-             <option
-                   applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-                   defaultValue="2"
-                   id="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpyhs"
-                   name="Multiply instructions level (ARC HS)"
-                   valueType="enumerated">
-            <enumeratedOptionValue
-                  command="-mmpy-option=none"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.none"
-                  isDefault="true"
-                  name="none">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=mpy"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.mpy"
-                  isDefault="false"
-                  name="mpy">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=plus_dmpy"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_dmpy"
-                  name="plus_dmpy">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=plus_macd"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_macd"
-                  name="plus_macd">
-            </enumeratedOptionValue>
-            <enumeratedOptionValue
-                  command="-mmpy-option=plus_qmacw"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_qmacw"
-                  name="plus_qmacw">
-            </enumeratedOptionValue>
-         </option>
-         <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                id="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuhs"
                name="FPU Type (ARC HS)"
                valueType="enumerated">
@@ -2434,7 +2357,44 @@
                commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
                id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyem"
                name="Multiply instructions (ARC EM)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpyem">
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  command="-mmpy-option=none"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.none"
+                  isDefault="true"
+                  name="none">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=w"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.w"
+                  name="w">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh1"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh1"
+                  isDefault="false"
+                  name="wlh1">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh2"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh2"
+                  name="wlh2">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh3"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh3"
+                  name="wlh3">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh4"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh4"
+                  name="wlh4">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=wlh5"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpyem.wlh5"
+                  name="wlh5">
+            </enumeratedOptionValue>
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
@@ -2681,7 +2641,7 @@
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.mpyem"
                name="Multiply instructions (ARC EM)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpyem">
+               superClass="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyem">
          </option>
          <option
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
@@ -2977,7 +2937,33 @@
                commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
                id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyhs"
                name="Multiply instructions (ARC HS)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpyhs">
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  command="-mmpy-option=none"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.none"
+                  isDefault="true"
+                  name="none">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=mpy"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.mpy"
+                  name="mpy">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=plus_dmpy"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_dmpy"
+                  name="plus_dmpy">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=plus_macd"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_macd"
+                  name="plus_macd">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mmpy-option=plus_qmacw"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mpy.plus_qmacw"
+                  name="plus_qmacw">
+            </enumeratedOptionValue>
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
@@ -3211,7 +3197,7 @@
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.mpyhs"
                name="Multiply instructions (ARC HS)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpyhs">
+               superClass="org.eclipse.cdt.cross.arc.gnu.linux.option.target.mpyhs">
          </option>
          <option
                category="com.synopsys.arc.gnu.elf.toolchain.base.target"
